--- a/index.html
+++ b/index.html
@@ -268,6 +268,19 @@ function cumprimentar(nome) {
 let mensagem = cumprimentar("Carlos");
 console.log(mensagem); // "Olá, Carlos!"
                 </pre>
+
+            </div>
+
+            <div class="video-link-container">
+                <a href="https://youtu.be/mGBlF2wtyjA" 
+                target="_blank" 
+                class="youtube-link">
+                    <div class="link-content">
+                        <span class="text">Clique aqui para assistir ao vídeo no YouTube!</span>
+                    </div>
+                </a>
+            </div>
+
             </div>
         </section>
 
