--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 problemas, automatizam tarefas e melhoram nossas vidas.</p>
             <div class="exemplo-codigo">
                 <pre>
-// Exemplo simples de código
-console.log("Olá, Mundo!");
+# Exemplo simples de código
+print("Olá, Mundo!")
                 </pre>
             </div>
             <div class="video-link-container">
@@ -167,11 +167,11 @@ console.log("Olá, Mundo!");
 
             <div class="exemplo-codigo">
                 <pre>
-// Declarando variáveis
-let idade = 23;               // Inteiro
-let altura = 1.75;            // Decimal
-let nome = "Fabrício";           // String
-let estudante = true;         // Booleano
+# Declarando variáveis
+idade = 23               # Inteiro
+altura = 1.75            # Decimal
+nome = "Fabrício"        # String
+estudante = True         # Booleano
                 </pre>
             </div>
             <div class="video-link-container">
@@ -222,10 +222,9 @@ else:
 
             <div class="exemplo-codigo">
                 <pre>
-// Imprime números de 1 a 5
-for (let i = 1; i <= 5; i++) {
-    console.log(i);
-}
+# Imprime números de 1 a 5
+for i in range(1, 6):
+    print(i)
                 </pre>
             </div>
 
@@ -234,13 +233,12 @@ for (let i = 1; i <= 5; i++) {
 
             <div class="exemplo-codigo">
                 <pre>
-// Contagem regressiva
-let contador = 5;
-while (contador > 0) {
-    console.log(contador);
-    contador--;
-}
-console.log("Feliz Ano Novo!");
+# Contagem regressiva
+contador = 5
+while contador > 0:
+    print(contador)
+    contador -= 1
+print("Feliz Ano Novo!")
                 </pre>
             </div>
             <div class="video-link-container">
@@ -260,14 +258,13 @@ console.log("Feliz Ano Novo!");
 
             <div class="exemplo-codigo">
                 <pre>
-// Definindo uma função
-function cumprimentar(nome) {
-    return "Olá, " + nome + "!";
-}
+# Definindo uma função
+def cumprimentar(nome):
+    return "Olá, " + nome + "!"
 
-// Usando a função
-let mensagem = cumprimentar("Carlos");
-console.log(mensagem); // "Olá, Carlos!"
+# Usando a função
+mensagem = cumprimentar("Carlos")
+print(mensagem)  # "Olá, Carlos!"
                 </pre>
 
             </div>
@@ -287,18 +284,18 @@ console.log(mensagem); // "Olá, Carlos!"
 
         <section id="exemplos" class="pratica">
             <h2>Exemplos Práticos</h2>
-            <p>Aqui estão alguns exemplos simples utlizando a linguagem Javascript para praticar:</p>
+            <p>Aqui estão alguns exemplos simples utlizando a linguagem Python para praticar:</p>
 
             <div class="exercicio">
                 <h3>Exercício 1: Calculadora Simples</h3>
                 <p>Crie uma função que some dois números e retorne o resultado.</p>
                 <div class="exemplo-codigo">
                     <pre>
-function somar(a, b) {
-    // Escreva seu código aqui
-}
+def somar(a, b):
+    # Escreva seu código aqui
+    return a + b
 
-console.log(somar(5, 3)); // Deve mostrar 8
+print(somar(5, 3))  # Deve mostrar 8
                     </pre>
                 </div>
             </div>
@@ -308,12 +305,12 @@ console.log(somar(5, 3)); // Deve mostrar 8
                 <p>Crie uma função que verifique se um número é par.</p>
                 <div class="exemplo-codigo">
                     <pre>
-function ehPar(numero) {
-    // Escreva seu código aqui
-}
+def ehPar(numero):
+    # Escreva seu código aqui
+    return numero % 2 == 0
 
-console.log(ehPar(4)); // Deve mostrar true
-console.log(ehPar(7)); // Deve mostrar false
+print(ehPar(4))  # Deve mostrar True
+print(ehPar(7))  # Deve mostrar False
                     </pre>
                 </div>
             </div>
@@ -323,12 +320,12 @@ console.log(ehPar(7)); // Deve mostrar false
                 <p>Crie uma função que converta uma temperatura em Celsius para Fahrenheit.</p>
                 <div class="exemplo-codigo">
                     <pre>
-function converterParaFahrenheit(celsius) {
-    // Escreva seu código aqui
-}
+def converterParaFahrenheit(celsius):
+    # Escreva seu código aqui
+    return (celsius * 9/5) + 32
 
-console.log(converterParaFahrenheit(0));  // Deve mostrar 32
-console.log(converterParaFahrenheit(25)); // Deve mostrar 77
+print(converterParaFahrenheit(0))   # Deve mostrar 32
+print(converterParaFahrenheit(25))  # Deve mostrar 77
                     </pre>
                 </div>
             </div>
@@ -439,9 +436,9 @@ console.log(converterParaFahrenheit(25)); // Deve mostrar 77
                     <a href="" target="_blank" class="linkedin-link">LinkedIn</a>
                 </div>
                 <div class="team-member">
-                    <img src="assets/profile3.jpg" alt="Membro 3" class="team-photo">
+                    <img src="assets/ledafoto.jpg" alt="Membro 3" class="team-photo">
                     <h3>Leda Miura</h3>
-                    <a href="" target="_blank" class="linkedin-link">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/leda-miura-7008491ba/" target="_blank" class="linkedin-link">LinkedIn</a>
                 </div>
                 <div class="team-member">
                     <img src="assets/profile3.jpg" alt="Membro4" class="team-photo">
