Adicionado material de apoio extra.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,27 @@
                         <button class="btn-card">Acessar Aula</button>
                     </div>
                 </div>
+                <div class="card-aula" data-aula="material-extra">
+                    <div class="card-imagem">
+                        <img src="assets/excercicioext.jpg" alt="Exercícios Extras">
+                    </div>
+                    <div class="card-conteudo">
+                        <h3>Material de Apoio Extra</h3>
+                        <p>Para aprofundar seus conhecimentos, faça download de exercícios práticos adicionais.
+                        </p>
+                        <div class="botoes-duplos">
+                            <a href="assets/EXERCICIOS DO SITE sem resposta.pdf" download class="btn-card"
+                                data-no-modal="true">
+                                Sem Gabarito
+                            </a>
+
+                            <a href="assets/EXERCICIOS DO SITE com resposta.pdf" download class="btn-card"
+                                data-no-modal="true">
+                                Com Gabarito
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -1197,12 +1218,6 @@ print(mensagem)  # "Olá, Carlos!"
             </div>
 
             </div>
-        </section>
-
-        <section id="material-extra" class="aula-detalhada">
-
-
-
         </section>
 
         <section id="exemplos" class="pratica">
