--- a/index.html
+++ b/index.html
@@ -1368,9 +1368,9 @@ print(converterParaFahrenheit(25))  # Deve mostrar 77
                         class="linkedin-link">LinkedIn</a>
                 </div>
                 <div class="team-member">
-                    <img src="assets/profile2.jpg" alt="Membro 2" class="team-photo">
+                    <img src="assets/fabriciofoto.jpg" alt="Membro 2" class="team-photo">
                     <h3>Fabrício Custódio</h3>
-                    <a href="" target="_blank" class="linkedin-link">LinkedIn</a>
+                    <a href="www.linkedin.com/in/fabriciocustodio" target="_blank" class="linkedin-link">LinkedIn</a>
                 </div>
                 <div class="team-member">
                     <img src="assets/ledafoto.jpg" alt="Membro 3" class="team-photo">
@@ -1397,3 +1397,4 @@ print(converterParaFahrenheit(25))  # Deve mostrar 77
 </body>
 
 </html>
+
