--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,7 @@ print(converterParaFahrenheit(25))  # Deve mostrar 77
                 <div class="team-member">
                     <img src="assets/fabriciofoto.jpg" alt="Membro 2" class="team-photo">
                     <h3>Fabrício Custódio</h3>
-                    <a href="www.linkedin.com/in/fabriciocustodio" target="_blank" class="linkedin-link">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/fabriciocustodio/" target="_blank" class="linkedin-link">LinkedIn</a>
                 </div>
                 <div class="team-member">
                     <img src="assets/ledafoto.jpg" alt="Membro 3" class="team-photo">
@@ -1397,4 +1397,5 @@ print(converterParaFahrenheit(25))  # Deve mostrar 77
 </body>
 
 </html>
+
 
