adicionados botões p/ download de slide + download p guia do site

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             <div class="apresentacao-imagem">
                 <img src="assets/conceito_programacao.png" alt="Conceito de programação">
             </div>
+            <div class="download-guide">
+                <a href="assets/placeholder.pdf" download class="btn-card" data-no-modal="true">
+                    Faça o Download do nosso guia do curso!
+                </a>
+            </div>
         </section>
 
         <section id="conteudo" class="conteudo">
@@ -233,6 +238,11 @@ print("Olá, Mundo!")
                     </div>
                 </a>
             </div>
+            <div class="download-slide">
+                <a href="assets/Aula 1 O que é Programação.pdf" download class="btn-card" data-no-modal="true">
+                    Download dos slides
+                </a>
+</div>
         </section>
 
         <section id="variaveis" class="aula-detalhada">
@@ -425,6 +435,10 @@ estudante = True         # Booleano
                     </div>
                 </a>
             </div>
+            <div class="download-slide">
+                <a href="assets/Aula 2 Variáveis e Tipos de Dados.pdf" download class="btn-card" data-no-modal="true">
+                    Download dos slides
+                </a>
 
         </section>
 
@@ -681,7 +695,10 @@ else:
                     </div>
                 </a>
             </div>
-
+            <div class="download-slide">
+                <a href="assets/Aula 3 Estruturas Condicionais.pdf" download class="btn-card" data-no-modal="true">
+                    Download dos slides
+                </a>
         </section>
 
         <section id="repeticao" class="aula-detalhada">
@@ -967,6 +984,10 @@ print("Feliz Ano Novo!")
                             </div>
                         </a>
                     </div>
+                    <div class="download-slide">
+                        <a href="assets/Aula 4 Laços de Repetição.pdf" download class="btn-card" data-no-modal="true">
+                            Download dos slides
+                        </a>
 
         </section>
 
@@ -1216,6 +1237,10 @@ print(mensagem)  # "Olá, Carlos!"
                     </div>
                 </a>
             </div>
+            <div class="download-slide">
+                <a href="assets/Aula 5 Funções.pdf" download class="btn-card" data-no-modal="true">
+                    Download dos slides
+                </a>
             </div>
         </section>
 
@@ -1379,9 +1404,9 @@ print(converterParaFahrenheit(25))  # Deve mostrar 77
                         class="linkedin-link">LinkedIn</a>
                 </div>
                 <div class="team-member">
-                    <img src="assets/profile3.jpg" alt="Membro4" class="team-photo">
+                    <img src="assets/matheusfoto.jpg" alt="Membro4" class="team-photo">
                     <h3>Matheus Rossieri</h3>
-                    <a href="" target="_blank" class="linkedin-link">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/matheus-rossieri-20049722b/" target="_blank" class="linkedin-link">LinkedIn</a>
                 </div>
             </div>
         </section>
