inserido o guia para o site (placeholder removido)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="assets/conceito_programacao.png" alt="Conceito de programação">
             </div>
             <div class="download-guide">
-                <a href="assets/placeholder.pdf" download class="btn-card" data-no-modal="true">
+                <a href="assets/Guia CodeRoots.pdf" download class="btn-card" data-no-modal="true">
                     Faça o Download do nosso guia do curso!
                 </a>
             </div>
